# mini-games

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  bootstrap.sh  build_all.sh
Common/include/: CommonCore.h
Common/src/: CommonCore.c  CommonCore.h
SlidingPuzzle/: CMakeLists.txt  README.md
SlidingPuzzle/src/: Audio.c  Audio.h  Config.h  GameConfig.h  GameState.h  Graphics.c  Input.c  Input.h  Logic.c  SlidingPuzzle.c  Sound.c  Sound.h  World.h
Snake/: CMakeLists.txt
Snake/src/: Audio.c  Audio.h  Config.c  Config.h  GameConfig.c  GameConfig.h  GameState.c  GameState.h  Graphics.c  Graphics.h  Input.c  Input.h  Logic.c  Logic.h  Snake.c  Sound.c  Sound.h  Tools.c  Tools.h  World.h
Videostop/: CMakeLists.txt  README.md
Videostop/src/: Audio.c  Audio.h  Config.c  Config.h  GameConfig.h  GameState.h  Graphics.c  Graphics.h  Input.c  Input.h  Logic.c  Logic.h  Sound.c  Sound.h  Videostop.c  World.c  World.h
cmake/: FindFreeALUT.cmake  FindFreeGLUT.cmake  FindGLFW.cmake  FindSDL2.cmake  FindWhereAmI.cmake  Utils.cmake  gitversion.cmake
hooks/: HOOKS.md  clang-format-pre-commit.sh  pre-commit
script/: common.sh  freealut.sh  freeglut.sh  glfw.sh  sdl2.sh
scripts/: common.sh  freealut.sh  freeglut.sh  glfw.sh  sdl2.sh  whereami_CMakeLists.txt
scripts/bootstrap/: allegro5.sh  freealut.sh  freeglut.sh  glfw.sh  sdl2.sh  setenv.sh  whereami.sh
zge/: CMakeLists.txt
zge/include/zge/: assert.h  audio.h  core.h  memory.h  zge.h
zge/src/: assert.c  audio.c  core.c  memory.c  zge.c
